# darkroom

./: .gitignore  README.md  config.yml  requirements.txt  setup.cfg  setup.py
darkroom/: build_instance_settings.py  image_builder.py  packer_settings.py  shell.py
darkroom/builders/: rhel.py
imagecreator/: image_builder.py  packer_settings.py  shell.py
imagecreator/builders/: rhel.py
kickstarts/: kickstart.centos5.cfg  kickstart.sl6.cfg
