[metadata]
name = darkroom
version = 0.0.1
summary = darkroom - a tool to create openstack images
description-file =
    README.md
author = Craig Tracey
author-email = craigtracey@gmail.com
home-page = https://github.com/blueboxgroup/darkroom
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    darkroom = darkroom.shell:main

[files]
packages =
    darkroom

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
